# assignment-tracker

./: .clippy.toml  .gitignore  Cargo.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  default-template.md  feature-template.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
app/: .gitignore  Cargo.toml  Makefile  README.md  index.html
app/src/: app.rs  lib.rs  main.rs
app/src/components/: navbar.rs  table.rs
app/src/pages/: home.rs
core/: Cargo.toml
core/src/: assignment.rs  assignments.rs  course.rs  lib.rs
core/src/marks/: grade.rs  mark.rs  out_of.rs  percent.rs
core/src/util/: percent.rs
core/tests/: mark.rs
csv/: test.csv
data/: invalid.json  test.csv  valid.json
src/: assignment.rs  lib.rs  main.rs  utils.rs
src/assignment/: invalid_error.rs  mod.rs  parse_error.rs
tracker/cli/: Cargo.toml
tracker/cli/src/: args.rs  main.rs
tracker/core/: Cargo.toml
tracker/core/src/: assignment.rs  class.rs  class_code.rs  errors.rs  lib.rs  mark.rs  tracker.rs
tracker/core/src/assignment/: mark.rs  mod.rs  status.rs
tracker/lib/: Cargo.toml
tracker/lib/src/: class_code.rs  lib.rs  tracker.rs
tracker/lib/src/assignment/: invalid_error.rs  mod.rs
tracker/test/: Cargo.toml
tracker/test/src/: main.rs
tracker/test_cli/: Cargo.toml
tracker/test_cli/src/: main.rs
tracker/web/backend/: Cargo.toml  wrangler.toml
tracker/web/backend/src/: lib.rs  utils.rs
tracker/web/frontend/: Cargo.toml  index.html
tracker/web/frontend/src/: components.rs  globals.rs  main.rs  pages.rs
(+4 files in other folders)
