[package]
name = "tracker_core"
version = "0.7.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
thiserror = "^1.0"

[dev-dependencies]
rstest = "0.13"
serde_json = "^1.0"
rand = "^0.8"